packages/design/tailwind/css/components.css
/* GOV.IE Components Stylesheets */

/* Button */
/* TODO: create separate focus classes once we get the variants for it */
.gi-btn {
  @apply gi-border-solid gi-border-sm gi-gap-2 gi-flex gi-rounded-sm focus:gi-outline focus:gi-outline-[3px] focus:gi-outline-yellow-400 focus:gi-outline-offset-0 gi-items-center;
}

/* Button Primary */

.gi-btn-primary {
  @apply gi-border-transparent gi-text-white gi-bg-emerald-800 hover:gi-bg-emerald-900 focus:gi-bg-emerald-900;
}

.gi-btn-primary-disabled {
  @apply gi-border-transparent gi-bg-gray-200 gi-text-gray-700 gi-pointer-events-none;
}

.gi-btn-primary-light {
  @apply gi-border-transparent gi-text-gray-950 gi-bg-white hover:gi-bg-gray-200 focus:gi-bg-gray-200 focus:gi-border-solid focus:gi-border-sm focus:gi-border-black;
}

.gi-btn-primary-light-disabled {
  @apply gi-border-transparent gi-bg-gray-800 gi-text-gray-400 gi-pointer-events-none;
}

.gi-btn-primary-dark {
  @apply gi-border-transparent gi-text-white gi-bg-gray-950 hover:gi-bg-gray-800 focus:gi-bg-gray-800;
}

.gi-btn-primary-dark-disabled {
  @apply gi-border-transparent gi-bg-gray-200 gi-text-gray-700 gi-pointer-events-none;
}

/* Button Secondary */

.gi-btn-secondary {
  @apply gi-border-emerald-800 gi-text-emerald-800 gi-border-emerald-800 hover:gi-bg-emerald-50;
}

.gi-btn-secondary-disabled {
  @apply gi-border-gray-400 gi-bg-gray-200 gi-text-gray-700 gi-pointer-events-none;
}

.gi-btn-secondary-light {
  @apply gi-text-white gi-border-white hover:gi-bg-gray-800 focus:gi-border-transparent;
}

.gi-btn-secondary-light-disabled {
  @apply gi-bg-gray-800 gi-border-gray-400 gi-text-gray-400 gi-pointer-events-none;
}

.gi-btn-secondary-dark {
  @apply gi-border-gray-950 hover:gi-bg-gray-200;
}

.gi-btn-secondary-dark-disabled {
  @apply gi-border-gray-400 gi-bg-gray-200 gi-text-gray-700 gi-pointer-events-none;
}

/* Button Flat */

.gi-btn-flat {
  @apply gi-border-transparent gi-text-emerald-800 hover:gi-bg-emerald-50 focus:gi-border-emerald-800;
}

.gi-btn-flat-disabled {
  @apply gi-border-transparent gi-text-gray-700 gi-pointer-events-none;
}

.gi-btn-flat-light {
  @apply gi-border-transparent gi-text-white hover:gi-bg-gray-800;
}

.gi-btn-flat-light-disabled {
  @apply gi-border-transparent gi-text-gray-400 gi-pointer-events-none;
}

.gi-btn-flat-dark {
  @apply gi-border-transparent gi-text-gray-950 hover:gi-bg-gray-200 focus:gi-border-emerald-800;
}

.gi-btn-flat-dark-disabled {
  @apply gi-border-transparent gi-text-gray-700 gi-pointer-events-none;
}

/* Button sizes */

.gi-btn-small {
  @apply gi-h-8 gi-px-2 gi-py-1.5 gi-text-xs;
}

.gi-btn-large {
  @apply gi-h-12 gi-px-4 gi-py-3 gi-text-2md;
}

.gi-btn-regular {
  @apply gi-h-10 gi-px-3 gi-py-2 gi-text-sm;
}

/* Tag */

.gi-tag {
  @apply gi-rounded-sm gi-border-xs gi-font-bold gi-leading-6 gi-py-0 gi-px-2 gi-inline-flex gi-justify-center gi-items-center;
}

.gi-tag-default {
  @apply gi-bg-gray-50 gi-border-gray-200 gi-text-gray-700;
}

.gi-tag-info {
  @apply gi-bg-blue-50 gi-border-blue-100 gi-text-blue-700;
}

.gi-tag-success {
  @apply gi-bg-green-50 gi-border-green-100 gi-text-green-700;
}

.gi-tag-warning {
  @apply gi-bg-yellow-50 gi-border-yellow-300 gi-text-yellow-700;
}

.gi-tag-error {
  @apply gi-bg-red-50 gi-border-red-100 gi-text-red-700;
}

/* Radio */

.gi-radio-base {
  @apply gi-cursor-pointer gi-appearance-none gi-border-solid gi-border-[2px] gi-rounded-[50%] gi-border-black checked:before:gi-border-solid checked:before:gi-rounded-[50%] checked:before:gi-border-black checked:before:gi-block checked:before:gi-w-0  focus:gi-border-[4px] focus:gi-outline-[3px] focus:gi-outline-yellow-400 focus:gi-outline hover:gi-shadow-[0_0_0_4px_#d8dadf] hover:focus:gi-shadow-[0_0_0_6px_#d8dadf]
}
.gi-radio-small {
  @apply gi-radio-base gi-w-6 gi-h-6 checked:before:gi-border-[5px] checked:before:gi-translate-x-[5px] checked:before:gi-translate-y-[5px] focus:before:gi-translate-x-[3px] focus:before:gi-translate-y-[3px]
}
.gi-radio-medium {
  @apply gi-radio-base gi-w-[30px] gi-h-[30px] checked:before:gi-border-[7px] checked:before:gi-translate-x-1.5 checked:before:gi-translate-y-1.5 focus:before:gi-translate-x-1 focus:before:gi-translate-y-1
}
.gi-radio-large {
  @apply gi-radio-base gi-w-11 gi-h-11 checked:before:gi-border-[10px] checked:before:gi-translate-x-[10px] checked:before:gi-translate-y-[10px] focus:before:gi-translate-x-[8px] focus:before:gi-translate-y-[8px]
}

